--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.85.6",
+    "@tanstack/react-query-devtools": "^5.89.0",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
     "next": "15.5.2",
@@ -17,7 +18,8 @@
     "react-dom": "19.1.0",
     "react-paginate": "^8.3.0",
     "use-debounce": "^10.0.5",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
